configuration fix for Linux